force-app/zurich-base/main/default/objects/AdminSetup__mdt/AdminSetup__mdt.object-meta.xml
<CustomObject>
    <label>AdminSetup</label>
    <pluralLabel>AdminSetup</pluralLabel>
</CustomObject>