force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/ExternalJobQueueBatchJobs__c.field-meta.xml
<CustomField>
    <fullName>ExternalJobQueueBatchJobs__c</fullName>
    <description>Número de hilos concurrentes del batch ExternalJobQueueBatch</description>
    <label>ExternalJobQueueBatch Jobs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>