force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_Auth_token__c.field-meta.xml
<CustomField>
    <fullName>IBA_Auth_token__c</fullName>
    <label>IBA Authorization token</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>