force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_EMEA_Authorization_token__c.field-meta.xml
<CustomField>
    <fullName>IBA_EMEA_Authorization_token__c</fullName>
    <label>IBA EMEA Authorization token</label>
    <type>TextArea</type>
</CustomField>