force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_EMEA_endpoint__c.field-meta.xml
<CustomField>
    <fullName>IBA_EMEA_endpoint__c</fullName>
    <label>IBA EMEA endpoint</label>
    <type>TextArea</type>
</CustomField>