force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_EMEA_Non_Country__c.field-meta.xml
<CustomField>
    <fullName>IBA_EMEA_Non_Country__c</fullName>
    <description>The name of the country that is not considered for a request to be IBA EMEA</description>
    <label>IBA EMEA Non Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>