force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_EMEA_Prefix__c.field-meta.xml
<CustomField>
    <fullName>IBA_EMEA_Prefix__c</fullName>
    <description>The text for the Prefix of EMEA in the CustomerNum field</description>
    <label>IBA EMEA Prefix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>