force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_Multi_Partner_Authorization_token__c.field-meta.xml
<CustomField>
    <fullName>IBA_Multi_Partner_Authorization_token__c</fullName>
    <label>IBA Multi-Partner Authorization token</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>