force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_Multi_Partner_endpoint__c.field-meta.xml
<CustomField>
    <fullName>IBA_Multi_Partner_endpoint__c</fullName>
    <label>IBA Multi-Partner endpoint</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>