force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBA_Multi_Partner_Origin__c.field-meta.xml
<CustomField>
    <fullName>IBA_Multi_Partner_Origin__c</fullName>
    <description>The text to be in the origin field of the External Request to be considered from IBA Multi-Partner</description>
    <label>IBA Multi-Partner Origin</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>