force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/IBACaseworker__c.field-meta.xml
<CustomField>
    <fullName>IBACaseworker__c</fullName>
    <description>One or multiple caseworker values. In that case, separated by comma “,”. When receiving a new policy, all caseworker values different from this values will be considered as offline.</description>
    <inlineHelpText>One or multiple caseworker values. In that case, separated by comma “,”. When receiving a new policy, all caseworker values different from this values will be considered as offline.</inlineHelpText>
    <label>IBACaseworker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>