force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <description>Maximum Number of retries if the callout with the response of external request’s processing fails</description>
    <label>Número máximo de reintentos</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>