force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/Multi_Partners__c.field-meta.xml
<CustomField>
    <fullName>Multi_Partners__c</fullName>
    <description>The list of pairs of Multi Partner values from IBA and their corresponding prefix. Each part of the pair must be separated by &quot;:&quot; and each Pair by &quot;;&quot;. Example: Orange Seguros:Orange;Telefon Seguros:Telefon</description>
    <label>Multi-Partners</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>