force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/NumberDaysDeleteErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberDaysDeleteErrors__c</fullName>
    <description>Indicates the number of days to delete errors since last created date (Error log)</description>
    <inlineHelpText>Indicates the number of days to delete errors since last created date (Error log)</inlineHelpText>
    <label>Num días borrado errores</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>