force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/NumberDaysDeleteRequestErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberDaysDeleteRequestErrors__c</fullName>
    <label>Num días borrado errores peticiones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>