force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/NumberDaysDeleteRequests__c.field-meta.xml
<CustomField>
    <fullName>NumberDaysDeleteRequests__c</fullName>
    <description>Indicates the number of days to delete a request since last processed date (External Request object)</description>
    <inlineHelpText>Indicates the number of days to delete a request since last processed date (External Request object)</inlineHelpText>
    <label>Num días borrado peticiones</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>