force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/NumDaysCallAtribution__c.field-meta.xml
<CustomField>
    <fullName>NumDaysCallAtribution__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Klinc:  Indicates the number of days that a valid call can be related to a new policy</description>
    <label>Num días atribucoón llamada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>