force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/NumDaysDeleteLeads__c.field-meta.xml
<CustomField>
    <fullName>NumDaysDeleteLeads__c</fullName>
    <description>Indicates the number of days that a quote and lead have to be deleted since the last modified date</description>
    <inlineHelpText>Indicates the number of days that a quote and lead have to be deleted since the last modified date</inlineHelpText>
    <label>Num días borrado leads</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>