force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/SameMasterPolicy__c.field-meta.xml
<CustomField>
    <fullName>SameMasterPolicy__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If true, indicates that materpolicy is at master entity. That is, if a life customer belongs to a partner, the non-life customer also belongs to the same masterpolicy</inlineHelpText>
    <label>Same Master Policy</label>
    <type>Checkbox</type>
</CustomField>