force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/WS_Service_Process_Request__c.field-meta.xml
<CustomField>
    <fullName>WS_Service_Process_Request__c</fullName>
    <description>The value of the Service Name field in the Webservice metadata to get the parser info for Process Request service.</description>
    <label>WS Service Process Request</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>