force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/WS_Service_Quote_Entry__c.field-meta.xml
<CustomField>
    <fullName>WS_Service_Quote_Entry__c</fullName>
    <description>The value of the Service Name field in the Webservice metadata to get the parser info for Quote Entry service.</description>
    <label>WS Service Quote Entry</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>