force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/WS_Source_IBA_Multi_Partner__c.field-meta.xml
<CustomField>
    <fullName>WS_Source_IBA_Multi_Partner__c</fullName>
    <description>The value of the Source field in the Webservice metadata to get the parser info for IBA Multi-Partner</description>
    <label>WS Source IBA Multi-Partner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>