force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/ZEGenesysCloudFlowId__c.field-meta.xml
<CustomField>
    <fullName>ZEGenesysCloudFlowId__c</fullName>
    <label>ZE Genesys Cloud Flow Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>