force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/ZEInboundEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ZEInboundEmailAddress__c</fullName>
    <label>ZE Inbound Email Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>