force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/ZEOGenesysCloudFlowId__c.field-meta.xml
<CustomField>
    <fullName>ZEOGenesysCloudFlowId__c</fullName>
    <label>ZEO Genesys Cloud Flow Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>