force-app/zurich-base/main/default/objects/AdminSetup__mdt/fields/ZEOInboundEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ZEOInboundEmailAddress__c</fullName>
    <label>ZEO Inbound Email Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>